--- a/style.css
+++ b/style.css
@@ -7,3 +7,28 @@
     text-align: end;
     font-size: x-large;
 }
+
+.col1 {
+    background-color: yellow;
+    border: 1px solid yellow; 
+    padding: 10px 17px; 
+    cursor: pointer; 
+}
+.col2 {
+    background-color: #00ff9d;
+    border: 1px solid #00ff80; 
+    padding: 10px; 
+    cursor: pointer; 
+}
+.col3 {
+    background-color: #ff0000;
+    border: 1px solid #ff0000; 
+    padding: 10px 61px; 
+    cursor: pointer; 
+}
+.col4 {
+    background-color: blue;
+    border: 1px solid blue; 
+    padding: 10px 17px; 
+    cursor: pointer; 
+}
